# snoopdiag

./: Makefile  Makefile.in  README  configure  configure.in  snoopdiag.c
