AC_INIT([IUMFS], [0.1.2], [admin2@whiteboard.ne.jp])
AC_PROG_CC
AC_PROG_CXX
AC_PROG_INSTALL

AC_ARG_ENABLE([64bit],
   [  --disable-64bit         disable build of 64-bit driver],
[use_64bit="$enableval"],[use_64bit=yes])

if test "$use_64bit" = "yes"
then
AC_CHECK_PROG(ISAINFO, isainfo, yes, no, /usr/bin)
else
ISAINFO=no
fi
if test "$ISAINFO" = "yes" -a "$use_64bit" = "yes";
then
    KARCH=`/usr/bin/isainfo -k`
else
    KARCH=`uname -m`
fi

OSNAME=`uname -s`

IS_GNU_LD=`ld --version 2>&1 | grep  GNU`
if test "$GCC" = yes; then
	CFLAGS="$CFLAGS -Wall"
	PTHREAD_CFLAGS="-pthreads"
else
	PTHREAD_CFLAGS="-mt"
fi

case $OSNAME in 
     'Darwin')
	CFLAGS="-DSNOOPDIAG_DARWIN"
        ;;
     'Linux')
	CFLAGS="-D_BSD_SOURCE -DSNOOPDIAG_LINUX"
        ;;
     'SunOS')
        CFLAGS="-lsocket -lnsl -DSNOOPDIAG_SUNOS"
        ;;
esac

case $KARCH in
     'sparc' )
	;;
     'i386' | 'i686')
	;;
     'sparcv9')
        CFLAGS="$CFLAGS -m64"
	;;
     'amd64' | 'x86_64')
        CFLAGS="$CFLAGS -m64"
	;;
esac

AC_ARG_ENABLE(debug,
[  --enable-debug          Enable debuging],
   AC_DEFINE(DEBUG, 1)
)

AC_SUBST(CFLAGS)
AC_SUBST(CC)
AC_SUBST(CXX)
AC_SUBST(PTHREAD_CFLAGS)

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
